# ros2_cfi_project

./: .gitignore  README.md  README_ATTACK_DEMO.md  build_and_test_day6.sh  setup_attack_demo.sh  setup_env.sh  test_attack_defense.sh
attack/: Makefile  attack_demo.py  debug_address.sh  quick_build.sh  run_attack_demo.sh  run_cfi_demo.sh  simple_vulnerable.cpp  vulnerable_subscription_node.cpp
cfi_lib/: Makefile  analyze_subscription.sh  attack_detector_cfi.cpp  auto_test_cfi.sh  basic_test.sh  build_and_test.sh  callback_hook_analysis.cpp  callback_interceptor.cpp  cfi_test  day5_working_cfi.cpp  day6_final_cfi.cpp  day6_final_cfi_always_active.cpp  day6_improved_cfi.cpp  diagnostic_tool.cpp  final_callback_hook.cpp  find_callback_offset.cpp  improved_cfi.cpp  quick_test_cfi.sh  robust_hooking.cpp  ros2_cfi_lib.cpp  runtime_callback_finder.cpp  setup_cfi.sh  simple_attack_detector.cpp  simple_callback_detector.cpp  simple_hook_test.cpp  simple_test_cfi.sh  test_attack_detection.sh  test_callback_analysis.sh  test_callback_detector.sh  test_cfi.cpp  test_cfi_hook  test_cfi_hook.cpp  test_cfi_protection.sh  test_final_cfi.sh  test_hook.sh  test_improved_cfi.sh  test_robust_hooking.sh  test_working_cfi.sh  working_cfi.cpp
evaluation/: day6_attack_defense_test.sh  day6_final_test.sh  direct_cfi_test.sh  test_modified_vulnerable.sh  working_cfi_demo.sh
evaluation/day6_automated_attack_logs/: attack_results_20250530_151817.txt  stats_20250530_151817.txt
evaluation/day6_final_logs/: cfi_performance_results.csv  test_stats_20250530_144214.txt  test_stats_20250531_162746.txt
exploit/: attack_demo.py  generate_payload.py
install/: local_setup.sh  setup.sh
install/basic_communication/lib/basic_communication/: publisher
install/basic_communication/share/ament_index/resource_index/parent_prefix_path/: basic_communication
install/basic_communication/share/basic_communication/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros2_node/: benchmark_node.cpp  multi_topic_node.cpp  performance_monitor.cpp  publisher.cpp  service_test_node.cpp
simulation/: attack_subscriber.cpp  legit_subscriber.cpp  vulnerable_target.cpp
src/basic_communication/: CMakeLists.txt
src/basic_communication/src/: memory_analysis.cpp  simple_pubsub.cpp  subscriber.cpp  vulnerable_subscriber.cpp
vulnerable_node/: CMakeLists.txt  easy_cfi_test.sh  final_working_attack.cpp  package.xml  simple_attack_demo.cpp  vulnerable_target.cpp
