<?xml version="1.0"?>
<package format="3">
  <name>vulnerable_node</name>
  <version>0.0.1</version>
  <description>Vulnerable ROS2 node for CFI testing</description>
  <maintainer email="test@test.com">test</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
